tests/errors/macro/parser_need_separator/set_ident_with_br.c
#define A
#set A(x)

int main()
{
	return 0;
}
